# depools

./: .gitignore  ARCHITECTURE.md  COMMANDS.md  CONFIG_EXAMPLES.md  Cargo.toml  Config.toml  Config.toml.example  EXAMPLES.md  FAQ.md  PRODUCTION_README.md  QUICK_START.md  README.md
src/: app.rs  config.rs  lib.rs  main.rs  math.rs  pool.rs  report.rs  risk.rs  test_helius.rs
src/application/: arbitrage_monitor.rs  commands.rs  mod.rs  services.rs
src/domain/: mod.rs
src/domain/arbitrage/: arbitrage_engine.rs  arbitrage_route.rs  arbitrage_strategy.rs  mod.rs  opportunity_detector.rs  profit_calculator.rs
src/domain/dex/: dex_interface.rs  dex_registry.rs  mod.rs
src/domain/execution/: arbitrage_executor.rs  mod.rs  transaction_builder.rs  transaction_executor.rs  transaction_validator.rs
src/domain/pool/: mod.rs  pool_analyzer.rs  pool_discovery.rs  pool_manager.rs
src/domain/price/: mod.rs  price_analyzer.rs  price_feed.rs  price_monitor.rs
src/exchanges/: compute_budget.rs  mod.rs  parsers.rs  parsers.rs.backup  transaction_builder.rs  types.rs  utils.rs
src/exchanges/api_clients/: mod.rs  orca_quote_client.rs  raydium_quote_client.rs
src/exchanges/common/: debug_parser.rs  mod.rs  token_utils.rs
src/exchanges/old/: mod.rs  orca_whirlpool.rs.old  raydium_v4.rs.old
src/exchanges/orca_whirlpool/: adapter.rs  mod.rs  parser.rs  types.rs
src/exchanges/raydium_v4/: adapter.rs  mod.rs  parser.rs  types.rs
src/infrastructure/: mod.rs  storage.rs
src/infrastructure/blockchain/: account_parser.rs  arbitrage_grpc.rs  dex_structures.rs  mod.rs  orca_structures.rs  pool_discovery.rs  profit_calculator.rs  raydium_structures.rs  realtime_arbitrage.rs  realtime_monitor.rs  rpc_client.rs  token_metadata.rs  transaction_executor.rs  vault_reader.rs  yellowstone_grpc.rs
src/infrastructure/blockchain/dex_adapters/: factory.rs  mod.rs  orca_adapter.rs  raydium_adapter.rs  traits.rs
src/opportunity/: calculator.rs  mod.rs  risk.rs  types.rs
src/opportunity/arbitrage/: arbitrage_engine.rs  arbitrage_types.rs  mod.rs
src/opportunity/calculator/: arbitrage_calculator.rs  mod.rs  profit_calculator.rs
src/opportunity/old/: mod.rs  scanner.rs.old
src/opportunity/scanner/: base_scanner.rs  cross_dex_scanner.rs  mod.rs
src/shared/: config.rs  errors.rs  mod.rs  types.rs  utils.rs
