[package]
name = "depools"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
futures = "0.3"
spl-token = "4"
spl-associated-token-account = "2"

[[bin]]
name = "depools"
path = "src/main.rs"

[[bin]]
name = "find_pools"
path = "src/bin/find_pools.rs"

[[bin]]
name = "check_apis"
path = "src/bin/check_apis.rs"