[package]
name = "depools"
version = "0.2.0"
edition = "2021"
description = "Solana Arbitrage Bot v2 - Built with DDD principles"

[dependencies]
# Solana ecosystem
solana-client = "2.1.14"
solana-sdk = "2.1.14"
solana-transaction-status = "2.1.14"
solana-account-decoder = "2.1.14"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
anchor-client = { version = "0.31.0", features = ["async"] }
anchor-lang = "=0.31.0"

# Real-time data
tonic = "0.10"
prost = "0.12"
tokio-stream = "0.1"
futures-util = "0.3"
yellowstone-grpc-client = "4.1.0"
yellowstone-grpc-proto = "4.1.1"

# Utilities
rand = "0.8"
bs58 = "0.4"
bincode = "1.3.3"
bytemuck = "1.21.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Configuration
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async traits
async-trait = "0.1"

# Futures
futures = "0.3"

# Utilities
hex = "0.4.3"
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "depools"
path = "src/main.rs"
